# bazaar

./: README.md
.github/workflows/: build-flatpak.yml
data/: io.github.kolunmi.Bazaar.gschema.xml
po/: LINGUAS  POTFILES.in  ar.po  bg.po  cs.po  de.po  el.po  es.po  fr.po  hu.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  tr.po  uk.po
src/: bazaar.gresource.xml  bz-application.c  bz-entry-group-util.c  bz-entry-group-util.h  bz-favorites-page.blp  bz-favorites-page.c  bz-favorites-page.h  bz-favorites-tile.blp  bz-favorites-tile.c  bz-favorites-tile.h  bz-global-net.c  bz-global-net.h  bz-global-progress.c  bz-installed-page.c  bz-installed-tile.c  bz-preferences-dialog.c  bz-window.blp  bz-window.c  meson.build
src/gtk/: style.css
